--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,46 +35,46 @@ steps:
     projects: '$(solution)'
     arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
 
-- task: RoslynAnalyzers@2
-  displayName: 'Run Roslyn code analyzers'
-  inputs:
-    userProvideBuildInfo: 'msBuildInfo'
-    msBuildVersion: '16.0'
-    msBuildArchitecture: 'DotNetCore'
-    msBuildCommandline: '$(Agent.ToolsDirectory)\dotnet\dotnet.exe build $(solution) --configuration $(buildConfiguration)'
-    rulesetName: 'Skype'
+# - task: RoslynAnalyzers@2
+#   displayName: 'Run Roslyn code analyzers'
+#   inputs:
+#     userProvideBuildInfo: 'msBuildInfo'
+#     msBuildVersion: '16.0'
+#     msBuildArchitecture: 'DotNetCore'
+#     msBuildCommandline: '$(Agent.ToolsDirectory)\dotnet\dotnet.exe build $(solution) --configuration $(buildConfiguration)'
+#     rulesetName: 'Skype'
 
-- task: SdtReport@1
-  displayName: 'Generate tool reports'
-  inputs:
-    AllTools: true
-    BinSkimBreakOn: 'Error'
-    CodesignValidationBreakOn: 'Error'
-    FxCopBreakOn: 'ErrorAbove'
-    ModernCopBreakOn: 'Error'
-    PoliCheckBreakOn: 'Severity1'
-    RoslynAnalyzersBreakOn: 'Error'
-    SemmleBreakOn: 'Error'
-    TSLintBreakOn: 'Error'
-    ToolLogsNotFoundAction: 'Standard'
+# - task: SdtReport@1
+#   displayName: 'Generate tool reports'
+#   inputs:
+#     AllTools: true
+#     BinSkimBreakOn: 'Error'
+#     CodesignValidationBreakOn: 'Error'
+#     FxCopBreakOn: 'ErrorAbove'
+#     ModernCopBreakOn: 'Error'
+#     PoliCheckBreakOn: 'Severity1'
+#     RoslynAnalyzersBreakOn: 'Error'
+#     SemmleBreakOn: 'Error'
+#     TSLintBreakOn: 'Error'
+#     ToolLogsNotFoundAction: 'Standard'
 
-- task: PostAnalysis@1
-  displayName: 'Analyze tool results'
-  inputs:
-    AllTools: true
-    BinSkimBreakOn: 'Error'
-    CodesignValidationBreakOn: 'Error'
-    FxCopBreakOn: 'ErrorAbove'
-    ModernCopBreakOn: 'Error'
-    PoliCheckBreakOn: 'Severity1'
-    RoslynAnalyzersBreakOn: 'Error'
-    SemmleBreakOn: 'Error'
-    TSLintBreakOn: 'Error'
-    ToolLogsNotFoundAction: 'Standard'
+# - task: PostAnalysis@1
+#   displayName: 'Analyze tool results'
+#   inputs:
+#     AllTools: true
+#     BinSkimBreakOn: 'Error'
+#     CodesignValidationBreakOn: 'Error'
+#     FxCopBreakOn: 'ErrorAbove'
+#     ModernCopBreakOn: 'Error'
+#     PoliCheckBreakOn: 'Severity1'
+#     RoslynAnalyzersBreakOn: 'Error'
+#     SemmleBreakOn: 'Error'
+#     TSLintBreakOn: 'Error'
+#     ToolLogsNotFoundAction: 'Standard'
 
-- task: ComponentGovernanceComponentDetection@0
-  displayName: 'Component detection'
-  inputs:
-    scanType: 'Register'
-    verbosity: 'Verbose'
-    alertWarningLevel: 'High'
+# - task: ComponentGovernanceComponentDetection@0
+#   displayName: 'Component detection'
+#   inputs:
+#     scanType: 'Register'
+#     verbosity: 'Verbose'
+#     alertWarningLevel: 'High'
