--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,12 +28,12 @@ steps:
     projects: '$(solution)'
     arguments: '--configuration $(buildConfiguration)'
 
-- task: DotNetCoreCLI@2
-  displayName: 'Test'
-  inputs:
-    command: test
-    projects: '$(solution)'
-    arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
+# - task: DotNetCoreCLI@2
+#   displayName: 'Test'
+#   inputs:
+#     command: test
+#     projects: '$(solution)'
+#     arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
 
 # - task: RoslynAnalyzers@2
 #   displayName: 'Run Roslyn code analyzers'
