--- a/Source/Microsoft.Teams.Apps.Timesheet/ClientApp/package.json
+++ b/Source/Microsoft.Teams.Apps.Timesheet/ClientApp/package.json
@@ -44,8 +44,8 @@
     "tslint": "^6.1.3"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts",
+    "build": "react-scripts",
     "test": "jest --coverage --watchAll",
     "eject": "react-scripts eject",
     "test:watch": "jest --watchAll",
